--- a/src/Blazor.Material/Drawer/_mdcDrawer.scss
+++ b/src/Blazor.Material/Drawer/_mdcDrawer.scss
@@ -1,4 +1,2 @@
-@inherits MDCDrawerComponent
-<aside ref="_MDCDrawer" class="@ClassString">
-    @ChildContent
-</aside>
+@import "@material/drawer/mdc-drawer";
+@import "@material/list/mdc-list";
