Upgrade to .NET Core 3.0

--- a/src/Blazor.Material/Button/MDCButton.razor
+++ b/src/Blazor.Material/Button/MDCButton.razor
@@ -1,6 +1,6 @@
 @inherits MDCButtonComponent
 <button class=@ClassString
-        ref="_MDCButton"
-        onclick=@OnClick >
+        @ref="_MDCButton"
+        @onclick=OnClick >
     @ChildContent
 </button>
