--- a/src/Blazor.Material/Drawer/MDCDrawer.razor
+++ b/src/Blazor.Material/Drawer/MDCDrawer.razor
@@ -1,4 +1,5 @@
 @inherits MDCDrawerComponent
-<aside ref="_MDCDrawer" class="@ClassString">
+<aside @ref="_MDCDrawer"
+       class="@ClassString">
     @ChildContent
 </aside>
