--- a/src/Blazor.Material/TopAppBar/MDCTopAppBar.razor
+++ b/src/Blazor.Material/TopAppBar/MDCTopAppBar.razor
@@ -1,4 +1,5 @@
 @inherits MDCTopAppBarComponent
-<header ref="_MDCTopAppBar" class="@ClassString">
+<header @ref="_MDCTopAppBar"
+        class="@ClassString">
     @ChildContent
 </header>
