--- a/src/Blazor.Material/Drawer/MDCDrawerContent.razor
+++ b/src/Blazor.Material/Drawer/MDCDrawerContent.razor
@@ -1,6 +1,6 @@
 <div class="mdc-drawer__content">
     @ChildContent
 </div>
-@functions{
-    [Parameter] protected RenderFragment ChildContent { get; set; }
+@code {
+    [Parameter] public RenderFragment ChildContent { get; set; }
 }
