--- a/src/Blazor.Material/TopAppBar/MDCTopAppBarRow.razor
+++ b/src/Blazor.Material/TopAppBar/MDCTopAppBarRow.razor
@@ -1,6 +1,6 @@
 <div class="mdc-top-app-bar__row">
     @ChildContent
 </div>
-@functions {
-    [Parameter] protected RenderFragment ChildContent { get; set; }
+@code {
+    [Parameter] public RenderFragment ChildContent { get; set; }
 }
