--- a/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
@@ -22,6 +22,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="component/button">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Button
+            </NavLink>
+        </li>
+
     </ul>
 </div>
 
