--- a/examples/Blazor.Material.Components.WebApp/_Imports.razor
+++ b/examples/Blazor.Material.Components.WebApp/_Imports.razor
@@ -5,4 +5,4 @@
 @using Microsoft.JSInterop
 @using Blazor.Material.Components.WebApp
 @using Blazor.Material.Components.WebApp.Shared
-@using Blazor.Material.Button
+@using Blazor.Material.Components.Button
