--- a/src/Blazor.Material/app.scss
+++ b/src/Blazor.Material/app.scss
@@ -1,4 +1,5 @@
-@import './Button/mdcButton';
+@import '../Blazor.Material.Components/Button/mdcButton';
+
 @import './Drawer/mdcDrawer';
 @import './Icons/mdcIcons';
 @import './TopAppBar/mdcTopAppBar';
