feat(button): Support for leading icon

--- a/examples/Blazor.Material.Components.WebApp/Pages/Button.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/Button.razor
@@ -11,18 +11,18 @@
             </div>
         </div>
     </div>
-    <h2 class="demo-title">Resources</h2>
-    <ul class="component-catalog-resources">
-    </ul>
     <h2 class="demo-title">Demos</h2>
     <div>
         <div>
             <h3 class="mdc-typography--subtitle1">Text Button</h3>
             <MDCButton>Default</MDCButton>
+            <MDCButton LeadingMaterialIconName="favorite">Icon</MDCButton>
         </div>
         <div>
             <h3 class="mdc-typography--subtitle1">Outlined Button</h3>
             <MDCButton Variant="@MDCButtonStyle.Outlined">Default</MDCButton>
+            <MDCButton Variant="@MDCButtonStyle.Outlined"
+                       LeadingMaterialIconName="favorite">Icon</MDCButton>
         </div>
     </div>
 </section>
