--- a/src/Blazor.Material.Components/Button/MDCButton.razor
+++ b/src/Blazor.Material.Components/Button/MDCButton.razor
@@ -3,5 +3,11 @@
 @inherits MDCButtonComponent
 <button class="@ClassString" @ref="_MDCButton" @onclick=OnClick>
     <div class="mdc-button__ripple"></div>
+
+    @if (!string.IsNullOrWhiteSpace(LeadingMaterialIconName))
+    {
+        <i class="material-icons mdc-button__icon" aria-hidden="true">@LeadingMaterialIconName</i>
+    }
+
     <span class="mdc-button__label">@ChildContent</span>
 </button>
