--- a/src/Blazor.Material/app.scss
+++ b/src/Blazor.Material/app.scss
@@ -1,4 +1,4 @@
-@import '../Blazor.Material.Components/Button/mdcButton';
+@import '../Leonardo.AspNetCore.Components.Material/Button/mdcButton';
 
 @import './Drawer/mdcDrawer';
 @import './Icons/mdcIcons';
