--- a/examples/Blazor.Material.Components.WebApp/Pages/Counter.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/Counter.razor
@@ -4,7 +4,9 @@
 
 <p>Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<MDCButton Variant="@MDCButtonStyle.Raised"
+           OnClick="@IncrementCount"
+           LeadingMaterialIconName="add">Click me</MDCButton>
 
 @code {
     int currentCount = 0;
