--- a/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
@@ -10,6 +10,13 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">Home</NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="counter">
+                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            </NavLink>
+        </li>
+
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="component/button">Button</NavLink>
         </li>
