chore(demo): Upgrade to .NET Core 3.1
Upgrade demo project to 'Blazor WebAssembly App' template 3.1.0-preview4.19579.2
Template: `dotnet new -i Microsoft.AspNetCore.Blazor.Templates::3.1.0-preview4.19579.2`

--- a/examples/Blazor.Material.Components.WebApp/Pages/Counter.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/Counter.razor
@@ -9,9 +9,9 @@
            LeadingMaterialIconName="add">Click me</MDCButton>
 
 @code {
-    int currentCount = 0;
+    private int currentCount = 0;
 
-    void IncrementCount()
+    private void IncrementCount()
     {
         currentCount++;
     }
