--- a/examples/Blazor.Material.Components.WebApp/Shared/SurveyPrompt.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/SurveyPrompt.razor
@@ -4,12 +4,13 @@
 
     <span class="text-nowrap">
         Please take our
-        <a target="_blank" class="font-weight-bold" href="https://go.microsoft.com/fwlink/?linkid=2100553">brief survey</a>
+        <a target="_blank" class="font-weight-bold" href="https://go.microsoft.com/fwlink/?linkid=2109206">brief survey</a>
     </span>
     and tell us what you think.
 </div>
 
 @code {
     // Demonstrates how a parent component can supply parameters
-    [Parameter] public string Title { get; set; }
+    [Parameter]
+    public string Title { get; set; }
 }
