--- a/src/Leonardo.AspNetCore.Components.Material/Button/MDCButton.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Button/MDCButton.razor
@@ -4,9 +4,9 @@
 <button class="@ClassString" @ref="_MDCButton" @onclick=OnClick>
     <div class="mdc-button__ripple"></div>
 
-    @if (!string.IsNullOrWhiteSpace(LeadingMaterialIconName))
+    @if (!string.IsNullOrWhiteSpace(LeadingIcon))
     {
-        <i class="material-icons mdc-button__icon" aria-hidden="true">@LeadingMaterialIconName</i>
+        <i class="material-icons mdc-button__icon" aria-hidden="true">@LeadingIcon</i>
     }
 
     <span class="mdc-button__label">@ChildContent</span>
