--- a/examples/Blazor.Material.Components.WebApp/Pages/Button.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/Button.razor
@@ -16,25 +16,25 @@
         <div>
             <h3 class="mdc-typography--subtitle1">Text Button</h3>
             <MDCButton>Default</MDCButton>
-            <MDCButton LeadingMaterialIconName="favorite">Icon</MDCButton>
+            <MDCButton LeadingIcon="favorite">Icon</MDCButton>
         </div>
         <div>
             <h3 class="mdc-typography--subtitle1">Raised Button</h3>
             <MDCButton Variant="@MDCButtonStyle.Raised">Default</MDCButton>
             <MDCButton Variant="@MDCButtonStyle.Raised"
-                       LeadingMaterialIconName="favorite">Icon</MDCButton>
+                       LeadingIcon="favorite">Icon</MDCButton>
         </div>
         <div>
             <h3 class="mdc-typography--subtitle1">Unelevated Button</h3>
             <MDCButton Variant="@MDCButtonStyle.Unelevated">Default</MDCButton>
             <MDCButton Variant="@MDCButtonStyle.Unelevated"
-                       LeadingMaterialIconName="favorite">Icon</MDCButton>
+                       LeadingIcon="favorite">Icon</MDCButton>
         </div>
         <div>
             <h3 class="mdc-typography--subtitle1">Outlined Button</h3>
             <MDCButton Variant="@MDCButtonStyle.Outlined">Default</MDCButton>
             <MDCButton Variant="@MDCButtonStyle.Outlined"
-                       LeadingMaterialIconName="favorite">Icon</MDCButton>
+                       LeadingIcon="favorite">Icon</MDCButton>
         </div>
     </div>
 </section>
