refactor: Start using razor partial classes

--- a/src/Leonardo.AspNetCore.Components.Material/Drawer/MDCDrawer.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Drawer/MDCDrawer.razor
@@ -1,4 +1,4 @@
-@inherits MDCDrawerComponent
+@inherits MaterialComponent
 <aside @ref="_MDCDrawer"
        class="@ClassString">
     @ChildContent
