--- a/src/Leonardo.AspNetCore.Components.Material/Button/MDCButton.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Button/MDCButton.razor
@@ -1,6 +1,4 @@
-@using Microsoft.AspNetCore.Components.Web
-
-@inherits MDCButtonComponent
+@inherits MaterialComponent
 <button class="@ClassString" @ref="_MDCButton" @onclick=OnClick>
     <div class="mdc-button__ripple"></div>
 
