feat(textfield): Ensure the markup contains the mandatory CSS classes

--- a/src/Leonardo.AspNetCore.Components.Material/TextField/MDCTextField.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/TextField/MDCTextField.razor
@@ -1,1 +1,6 @@
 @inherits MaterialComponent
+<div class="@ClassString">
+    <input type="text" id="my-text-field" class="mdc-text-field__input">
+    <label class="mdc-floating-label" for="my-text-field">Hint text</label>
+    <div class="mdc-line-ripple"></div>
+</div>
