--- a/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
@@ -25,6 +25,9 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="component/button">Button</NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="component/text-field">Text Field</NavLink>
+        </li>
     </ul>
 </div>
 
