feat(textfield): JavaScript Instantiation

--- a/src/Leonardo.AspNetCore.Components.Material/TextField/MDCTextField.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/TextField/MDCTextField.razor
@@ -1,5 +1,5 @@
 @inherits MaterialComponent
-<div class="@ClassString">
+<div class="@ClassString" @ref="mdcTextFieldElement">
     <input type="text" id="@Id" class="mdc-text-field__input" value="@Value">
     <label class="mdc-floating-label" for="@Id">@Label</label>
     <div class="mdc-line-ripple"></div>
