feat(select): Install npm package and import styles

--- a/src/Leonardo.AspNetCore.Components.Material/app.scss
+++ b/src/Leonardo.AspNetCore.Components.Material/app.scss
@@ -1,3 +1,4 @@
 @import './Button/mdcButton';
-@import './TextField/mdcTextField';
 @import './Icons/mdcIcons';
+@import './Select/mdcSelect';
+@import './TextField/mdcTextField';
