feat(select): JavaScript instantiation

--- a/src/Leonardo.AspNetCore.Components.Material/Select/MDCSelect.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Select/MDCSelect.razor
@@ -1,5 +1,5 @@
 @inherits MaterialComponent
-<div class="@ClassString">
+<div class="@ClassString" @ref="mdcSelectElement">
     <div class="mdc-select__anchor demo-width-class">
         <i class="mdc-select__dropdown-icon"></i>
         <div class="mdc-select__selected-text"></div>
