--- a/examples/Blazor.Material.Components.WebApp/_Imports.razor
+++ b/examples/Blazor.Material.Components.WebApp/_Imports.razor
@@ -6,4 +6,5 @@
 @using Blazor.Material.Components.WebApp
 @using Blazor.Material.Components.WebApp.Shared
 @using Leonardo.AspNetCore.Components.Material.Button
+@using Leonardo.AspNetCore.Components.Material.Select
 @using Leonardo.AspNetCore.Components.Material.TextField
