--- a/src/Leonardo.AspNetCore.Components.Material/Select/MDCSelect.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Select/MDCSelect.razor
@@ -9,17 +9,12 @@
     <div class="mdc-select__menu mdc-menu mdc-menu-surface demo-width-class">
         <ul class="mdc-list">
             <li class="mdc-list-item mdc-list-item--selected" data-value="" aria-selected="true"></li>
-            <!--
-            <li class="mdc-list-item" data-value="grains">
-                Bread, Cereal, Rice, and Pasta
-            </li>
-            <li class="mdc-list-item" data-value="vegetables">
-                Vegetables
-            </li>
-            <li class="mdc-list-item" data-value="fruit">
-                Fruit
-            </li>
-            -->
+            @foreach (var item in DataSource)
+            {
+                <li class="mdc-list-item" data-value="grains">
+                    Bread, Cereal, Rice, and Pasta
+                </li>
+            }
         </ul>
     </div>
 </div>
