--- a/src/Leonardo.AspNetCore.Components.Material/TextField/MDCTextField.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/TextField/MDCTextField.razor
@@ -4,7 +4,7 @@
 
     @if (Variant == MDCTextFieldStyle.Filled)
     {
-        <label class="mdc-floating-label" for="@Id">@Label</label>
+        <label class="@LabelClassString" for="@Id">@Label</label>
         <div class="mdc-line-ripple"></div>
     }
     else if (Variant == MDCTextFieldStyle.Outlined)
@@ -12,7 +12,7 @@
         <div class="mdc-notched-outline">
             <div class="mdc-notched-outline__leading"></div>
             <div class="mdc-notched-outline__notch">
-                <label class="mdc-floating-label" for="@Id">@Label</label>
+                <label class="@LabelClassString" for="@Id">@Label</label>
             </div>
             <div class="mdc-notched-outline__trailing"></div>
         </div>
