refactor(demo): Factor out boilerplate code into a reusable component

--- a/examples/Blazor.Material.Components.WebApp/Pages/ButtonCatalog.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/ButtonCatalog.razor
@@ -1,40 +1,21 @@
 ﻿@page "/component/button"
-
-<section class="component-catalog-panel">
-    <div class="component-catalog-panel__hero-area">
-        <div class="component-catalog-panel__header">
-            <h1 class="component-catalog-panel__header-elements mdc-typography--headline3">
-                Button
-            </h1>
-            <div class="hero-component">
-                <MDCButton Variant="@Variant">@ButtonText</MDCButton>
+<ComponentCatalogPanel Title="Button">
+    <HeroComponent>
+        <MDCButton Variant="@Variant">@ButtonText</MDCButton>
+    </HeroComponent>
+    <HeroComponentOptions>
+        <li class="mdc-list-item catalog-tf-list-item">
+            <div>
+                <MDCSelect Label="Variant" DataSource="@VariantItems" @bind-Value="@Variant" />
             </div>
-            <div class="hero-options component-catalog-panel__header-elements component-catalog-panel__header__hero-options">
-                <ul class="mdc-list mdc-list--non-interactive">
-                    <li class="mdc-list-item">
-                        <span class="mdc-typography--overline">Options</span>
-                    </li>
-                    <li class="mdc-list-item catalog-tf-list-item">
-                        <div>
-                            <MDCSelect Label="Variant" DataSource="@VariantItems" @bind-Value="@Variant" />
-                        </div>
-                    </li>
-                    <li class="mdc-list-item catalog-tf-list-item">
-                        <div>
-                            <MDCTextField Label="Button Text" Variant="MDCTextFieldStyle.Outlined" @bind-Value="ButtonText"/>
-                        </div>
-                    </li>
-                </ul>
+        </li>
+        <li class="mdc-list-item catalog-tf-list-item">
+            <div>
+                <MDCTextField Label="Button Text" Variant="MDCTextFieldStyle.Outlined" @bind-Value="ButtonText" />
             </div>
-        </div>
-    </div>
-    <h2 class="demo-title">Demos</h2>
-    <div>
-        <div>
-            <h3 class="mdc-typography--subtitle1">Text Button</h3>
-            <MDCButton>Default</MDCButton>
-            <MDCButton LeadingIcon="favorite">Icon</MDCButton>
-        </div>
+        </li>
+    </HeroComponentOptions>
+    <Demos>
         <div>
             <h3 class="mdc-typography--subtitle1">Raised Button</h3>
             <MDCButton Variant="@MDCButtonStyle.Raised">Default</MDCButton>
@@ -53,8 +34,8 @@
             <MDCButton Variant="@MDCButtonStyle.Outlined"
                        LeadingIcon="favorite">Icon</MDCButton>
         </div>
-    </div>
-</section>
+    </Demos>
+</ComponentCatalogPanel>
 
 @code {
     private string ButtonText { get; set; } = "Learn More";
