--- a/src/Leonardo.AspNetCore.Components.Material/Select/MDCSelect.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Select/MDCSelect.razor
@@ -3,17 +3,17 @@
 <div class="@ClassString" id="@Id" @ref="mdcSelectElement">
     <div class="mdc-select__anchor demo-width-class">
         <i class="mdc-select__dropdown-icon"></i>
-        <div class="mdc-select__selected-text"></div>
-        <span class="mdc-floating-label">@Label</span>
+        <div class="mdc-select__selected-text">@SelectedText</div>
+        <span class="@LabelClassString">@Label</span>
         <div class="mdc-line-ripple"></div>
     </div>
     <div class="mdc-select__menu mdc-menu mdc-menu-surface demo-width-class">
         <ul class="mdc-list">
-            <li class="mdc-list-item mdc-list-item--selected" data-value="" aria-selected="true"></li>
+            <li class="@BuildItemClassString()" data-value="" aria-selected="true"></li>
             @foreach (var item in DataSource)
             {
-                <li class="mdc-list-item" data-value="@GetDataValue(item)">
-                    @GetDisplayText(item)
+                <li class="@BuildItemClassString(item)" data-value="@GetItemDataValue(item)">
+                    @GetItemDisplayText(item)
                 </li>
             }
         </ul>
