demo(text-field): Add select that allows changing the text field's variant

--- a/examples/Blazor.Material.Components.WebApp/Pages/ButtonCatalog.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/ButtonCatalog.razor
@@ -16,24 +16,21 @@
         </li>
     </HeroComponentOptions>
     <Demos>
-        <div>
-            <h3 class="mdc-typography--subtitle1">Raised Button</h3>
+        <ComponentDemo Title="Raised Button">
             <MDCButton Variant="@MDCButtonStyle.Raised">Default</MDCButton>
             <MDCButton Variant="@MDCButtonStyle.Raised"
                        LeadingIcon="favorite">Icon</MDCButton>
-        </div>
-        <div>
-            <h3 class="mdc-typography--subtitle1">Unelevated Button</h3>
+        </ComponentDemo>
+        <ComponentDemo Title="Unelevated Button">
             <MDCButton Variant="@MDCButtonStyle.Unelevated">Default</MDCButton>
             <MDCButton Variant="@MDCButtonStyle.Unelevated"
                        LeadingIcon="favorite">Icon</MDCButton>
-        </div>
-        <div>
-            <h3 class="mdc-typography--subtitle1">Outlined Button</h3>
+        </ComponentDemo>
+        <ComponentDemo Title="Outlined Button">
             <MDCButton Variant="@MDCButtonStyle.Outlined">Default</MDCButton>
             <MDCButton Variant="@MDCButtonStyle.Outlined"
                        LeadingIcon="favorite">Icon</MDCButton>
-        </div>
+        </ComponentDemo>
     </Demos>
 </ComponentCatalogPanel>
 
