--- a/examples/Blazor.Material.Components.WebApp/Pages/TextFieldCatalog.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/TextFieldCatalog.razor
@@ -1,9 +1,14 @@
 ﻿@page "/component/text-field"
 <ComponentCatalogPanel Title="Text Field">
     <HeroComponent>
-        <MDCTextField Label="@Label" @bind-Value="@Value" />
+        <MDCTextField Variant="@Variant" Label="@Label" @bind-Value="@Value" />
     </HeroComponent>
     <HeroComponentOptions>
+        <li class="mdc-list-item catalog-tf-list-item">
+            <div>
+                <MDCSelect Label="Variant" DataSource="@VariantItems" @bind-Value="@Variant" />
+            </div>
+        </li>
         <li class="mdc-list-item catalog-tf-list-item">
             <div>
                 <p>@Value</p>
@@ -11,18 +16,18 @@
         </li>
     </HeroComponentOptions>
     <Demos>
-        <div>
-            <h3 class="mdc-typography--subtitle1">Filled</h3>
+        <ComponentDemo Title="Filled">
             <MDCTextField Label="Standard" />
-        </div>
-        <div>
-            <h3 class="mdc-typography--subtitle1">Outlined</h3>
+        </ComponentDemo>
+        <ComponentDemo Title="Outlined">
             <MDCTextField Label="Standard" Variant="MDCTextFieldStyle.Outlined" />
-        </div>
+        </ComponentDemo>
     </Demos>
 </ComponentCatalogPanel>
 
 @code {
     private string Label { get; set; } = "Name";
     private string Value { get; set; } = "";
+    private IEnumerable<MDCTextFieldStyle> VariantItems => Enum.GetValues(typeof(MDCTextFieldStyle)).OfType<MDCTextFieldStyle>();
+    private MDCTextFieldStyle Variant { get; set; } = MDCTextFieldStyle.Filled;
 }
