--- a/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
@@ -26,7 +26,7 @@
             <NavLink class="nav-link" href="component/button">Button</NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="component/Select">Select</NavLink>
+            <NavLink class="nav-link" href="component/select">Select</NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="component/text-field">Text Field</NavLink>
