refactor: Rename Sass files

--- a/src/Leonardo.AspNetCore.Components.Material/app.scss
+++ b/src/Leonardo.AspNetCore.Components.Material/app.scss
@@ -1,4 +1,4 @@
-@import './Button/mdcButton';
+@import './Button/MDCButton.razor.scss';
 @import './Icons/mdcIcons';
-@import './Select/mdcSelect';
-@import './TextField/mdcTextField';
+@import './Select/MDCSelect.razor.scss';
+@import './TextField/MDCTextField.razor.scss';
