feat(checkbox): Initial scaffolding

--- a/src/Leonardo.AspNetCore.Components.Material/app.scss
+++ b/src/Leonardo.AspNetCore.Components.Material/app.scss
@@ -1,4 +1,5 @@
 @import './Button/MDCButton.razor.scss';
+@import './Checkbox/MDCCheckbox.razor.scss';
 @import './Icons/mdcIcons';
 @import './Select/MDCSelect.razor.scss';
 @import './TextField/MDCTextField.razor.scss';
