demo(checkbox): Initial scaffolding

--- a/examples/Blazor.Material.Components.WebApp/Shared/ComponentCatalogPanel.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/ComponentCatalogPanel.razor
@@ -6,7 +6,11 @@
             </h1>
             <div class="hero-component">
                 <div class="mdc-tab-bar catalog-hero-tab-bar" role="tablist">
-                    @HeroComponent
+                </div>
+                <div class="tab-container">
+                    <div class="tab-content">
+                        @HeroComponent
+                    </div>
                 </div>
             </div>
             <div class="hero-options component-catalog-panel__header-elements component-catalog-panel__header__hero-options">
