--- a/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
@@ -26,6 +26,9 @@
             <NavLink class="nav-link" href="component/button">Button</NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="component/checkbox">Checkbox</NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="component/select">Select</NavLink>
         </li>
         <li class="nav-item px-3">
