--- a/src/Leonardo.AspNetCore.Components.Material/Checkbox/MDCCheckbox.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Checkbox/MDCCheckbox.razor
@@ -15,5 +15,5 @@
         </div>
         <div class="mdc-checkbox__ripple"></div>
     </div>
-    <label for="checkbox-1">Checkbox 1</label>
+    <label for="checkbox-1">@Label</label>
 </div>
