--- a/src/Leonardo.AspNetCore.Components.Material/Checkbox/MDCCheckbox.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Checkbox/MDCCheckbox.razor
@@ -3,7 +3,7 @@
     <div class="@ClassString">
         <input type="checkbox"
                class="mdc-checkbox__native-control"
-               id="checkbox-1" />
+               id="@Id" />
         <div class="mdc-checkbox__background">
             <svg class="mdc-checkbox__checkmark"
                  viewBox="0 0 24 24">
@@ -15,5 +15,5 @@
         </div>
         <div class="mdc-checkbox__ripple"></div>
     </div>
-    <label for="checkbox-1">@Label</label>
+    <label for="@Id">@Label</label>
 </div>
