--- a/examples/Blazor.Material.Components.WebApp/Pages/CheckboxCatalog.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/CheckboxCatalog.razor
@@ -11,7 +11,7 @@
         </li>
         <li class="mdc-list-item catalog-tf-list-item">
             <div>
-                <MDCCheckbox @bind-Value="@Value" />
+                <MDCCheckbox @bind-Value="@Value" Label="Current Value" Disabled="true"/>
             </div>
         </li>
     </HeroComponentOptions>
