feat(top-app-bar): Initial scaffolding

--- a/examples/Blazor.Material.Components.WebApp/_Imports.razor
+++ b/examples/Blazor.Material.Components.WebApp/_Imports.razor
@@ -9,3 +9,4 @@
 @using Leonardo.AspNetCore.Components.Material.Checkbox
 @using Leonardo.AspNetCore.Components.Material.Select
 @using Leonardo.AspNetCore.Components.Material.TextField
+@using Leonardo.AspNetCore.Components.Material.TopAppBar
