--- a/src/Leonardo.AspNetCore.Components.Material/app.scss
+++ b/src/Leonardo.AspNetCore.Components.Material/app.scss
@@ -3,3 +3,4 @@
 @import './Icons/mdcIcons';
 @import './Select/MDCSelect.razor.scss';
 @import './TextField/MDCTextField.razor.scss';
+@import './TopAppBar/MDCTopAppBar.razor.scss';
