--- a/src/Leonardo.AspNetCore.Components.Material/TopAppBar/MDCTopAppBar.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/TopAppBar/MDCTopAppBar.razor
@@ -3,7 +3,7 @@
     <div class="mdc-top-app-bar__row">
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
             <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
-            <span class="mdc-top-app-bar__title">Title</span>
+            <span class="mdc-top-app-bar__title">@Title</span>
         </section>
     </div>
 </header>
