feat(top-app-bar): JavaScript Instantiation

--- a/src/Leonardo.AspNetCore.Components.Material/TopAppBar/MDCTopAppBar.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/TopAppBar/MDCTopAppBar.razor
@@ -1,5 +1,5 @@
 @inherits MaterialComponent
-<header class="@ClassString">
+<header class="@ClassString" id="@Id" @ref="mdcTopAppBarElement">
     <div class="mdc-top-app-bar__row">
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
             <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
