demo(top-app-bar): Style the top app bar

--- a/examples/Blazor.Material.Components.WebApp/Pages/TopAppBarCatalog.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/TopAppBarCatalog.razor
@@ -1,7 +1,7 @@
 ﻿@page "/component/top-app-bar"
 <ComponentCatalogPanel Title="Top App Bar">
     <HeroComponent>
-        <MDCTopAppBar Title="@Title" />
+        <MDCTopAppBar Title="@Title" Class="hero-top-app-bar" />
     </HeroComponent>
     <HeroComponentOptions>
         <ComponentOption>
